Change PagedList in order to pass parameters
* Implement paging for Tags
