# NotkaMobile/ViewModels/NoteVM/NoteEditViewModel.cs
@@ -119,10 +119,10 @@ namespace NotkaMobile.ViewModels.NoteVM
 		private async Task LoadTags()
 		{
 			_tagDataStore = new TagDataStore();
+			_tagDataStore.Params.PageSize = 0;
 			await _tagDataStore.RefreshListFromService();
 			Tags = _tagDataStore.Items;
 		}
-
 
 		#endregion
 		#region Commands
